compiler/testData/diagnostics/tests/multiplatform/enum/constructorInHeaderEnum.ll.kt
// MODULE: m1-common
// FILE: common.kt

expect enum class En<!EXPECTED_ENUM_CONSTRUCTOR, EXPECTED_PRIVATE_CONSTRUCTOR_WARNING!>(x: Int)<!> {
    E1,
    E2<!SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS!>(42)<!>,
    ;

    <!EXPECTED_ENUM_CONSTRUCTOR, EXPECTED_PRIVATE_CONSTRUCTOR_WARNING!>constructor(s: String)<!>
}

expect enum class En2 {
    E1<!SUPERTYPE_INITIALIZED_IN_EXPECTED_CLASS!>()<!>
}
